# rusty-bot-wotlk

./: .gitignore  Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES.md  TODO.md
.github/workflows/: ci.yml
config/wow/wotlk/: connection.toml
crates/bot-core/: Cargo copy.toml  Cargo.toml  README.md  config.toml
crates/bot-core/src/: lib.rs  llm.rs  vision.rs
crates/bot-core/src copy/: README.md  bot_launcher.rs  builder.rs  config.rs  input.rs  llm.rs  login.rs  main.rs  packets.rs  receiver.rs  sha1.rs  transport.rs  vision.rs
crates/bot-core/src copy/auth/: challenge.rs  handshake.rs  mod.rs
crates/bot-core/src copy/player/: constants.rs  equipment.rs  inventory.rs  mod.rs  other_state.rs  player_state.rs  spells.rs  talents.rs
crates/bot-core/src copy/utils/: bitflags.rs  equipment.rs  inventory.rs  mod.rs  reader.rs  spellbook.rs  talents.rs
crates/bot-core/src copy/world/: npc_state.rs  world_state.rs
crates/bot-core/src/agent/: executor.rs  game_api.rs  goal.rs  harness.rs  loop.rs  memory.rs  mod.rs  observation.rs  prompt.rs  strategy.rs  tools.rs  wire.rs
crates/bot-core/src/player/: constants.rs  equipment.rs  inventory.rs  other_state.rs  player_state.rs  spells.rs  talents.rs
crates/bot-core/src/world/: mod.rs  npc_state.rs  world_state.rs
crates/gateway-proxy/: Cargo.toml
crates/gateway-proxy/src/: config_loader.rs  lib.rs  main.rs  proxy.rs  wotlk.rs
crates/gateway-proxy/tests/: auth_session_opcode_test.rs  opcode_drift_test.rs
crates/runner/: Cargo.toml
crates/runner/src/: main.rs
scripts/: control_panel.py  mock_ollama.py  run_mock_ollama_smoke.sh  run_runner_with_mock.sh  test_llm_setup.sh
