[package]
name = "rusty-bot-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
byteorder = "1.5.0"
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
