[package]
name = "rusty-bot-proxy"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
repository = "https://github.com/notOrrytrout/rusty-bot-wotlk"

[dependencies]
anyhow = "1"
async-broadcast = "0.7.1"
binrw = "0.14.1"
bitflags = "2.10.0"
byteorder = "1.5.0"
hmac-sha = "0.6.1"
inventory = "0.3"
num-bigint = "0.4.6"
rand = "0.9.0"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sha-1 = "0.9.8"
tokio = { version = "1", features = ["sync", "net", "io-util", "macros", "time", "rt-multi-thread"] }
tokio-util = "0.7.18"
toml = "0.8.20"
rusty-bot-core = { path = "../bot-core" }
regex = "1.12.3"
