[package]
name = "rusty-bot-runner"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
repository = "https://github.com/notOrrytrout/rusty-bot-wotlk"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
tokio = { version = "1", features = ["net", "io-util", "macros", "time", "rt-multi-thread", "sync"] }

rusty-bot-core = { path = "../bot-core" }

